--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -203,6 +203,17 @@ div.widget {
     }
   }
 }
+/* brand icon */
+.navbar-brand > img.logo {
+  margin-left: 15px;
+  width: 36px;
+  display: inline;
+}
+.navbar-brand > span {
+  margin-left: 2px;
+  font-size: 15px;
+  font-weight: bold;
+}
 
 .navbar .alert {
     padding: 5px 10px;
