--- a/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
+++ b/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
@@ -14,7 +14,7 @@
   box-shadow: inset 0 0 0 2px #44C0FF;
 }
 
-.grid-resizable-container:hover .grid-spacer {
+.grid-resizable-container .grid-spacer {
   box-shadow: inset 0 0 0 1px #eaeaea;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .resize-handle--right {
-  width: 2px;
+  width: 3px;
   height: 20px;
   right: -2px;
   top: 47%;
@@ -54,7 +54,7 @@
   }
 
 .resize-handle--bottom {
-  height: 2px;
+  height: 3px;
   width: 20px;
   bottom: 10px;
   left: 47%;
