--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
@@ -13,40 +13,63 @@
     padding-left: 16px;
 }
 
+/* Chart */
+.dashboard-component-chart {
+  width: 100%;
+  height: 100%;
+  color: #879399;
+  background-color: #fff;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container--resizing .dashboard-component-chart,
+.dashboard-builder--dragging .dashboard-component-chart,
+.dashboard-component-chart:hover {
+  box-shadow: inset 0 0 0 1px #CFD8DC;
+}
+
 /* Divider */
 .dashboard-component-divider {
   width: 100%;
+  padding: 24px 0; /* this is padding not margin to enable a larger mouse target */
+  background-color: transparent;
+}
+
+.dashboard-component-divider > div {
   height: 1px;
-  margin: 24px 0;
+  width: 100%;
   background-color: #CFD8DC;
 }
 
 /* Tabs -- this overwrites Superset bootstrap theme tab styling */
 .dashboard-component-tabs {
   width: 100%;
-  background-color: inherit;
+  background-color: white;
 }
 
-.grid-row-container .dashboard-component-tabs .nav-tabs {
+.dashboard-component-tabs .nav-tabs {
   border-bottom: 1px solid #CFD8DC;
 }
 
 /* by moving padding from <a/> to <li/> we can restrict the selected tab indicator to text width */
-.grid-row-container .dashboard-component-tabs .nav-tabs > li {
+.dashboard-component-tabs .nav-tabs > li {
   padding: 0 16px;
 }
 
-.grid-row-container .dashboard-component-tabs .nav-tabs > li > a {
+.dashboard-component-tabs .nav-tabs > li > a {
   color: #263238;
   border: none;
   padding: 12px 0 14px 0;
 }
 
-.grid-row-container .dashboard-component-tabs .nav-tabs > li.active > a {
+.dashboard-component-tabs .nav-tabs > li.active > a {
   border: none;
 }
 
-.grid-row-container .dashboard-component-tabs .nav-tabs > li.active > a:after {
+.dashboard-component-tabs .nav-tabs > li.active > a:after {
   content: "";
   position: absolute;
   height: 3px;
@@ -55,7 +78,7 @@
   background: linear-gradient(to right, #E32464, #2C2261);
 }
 
-.grid-row-container .dashboard-component-tabs .nav-tabs > li > a:hover {
+.dashboard-component-tabs .nav-tabs > li > a:hover {
   border: none;
   background: inherit;
   color: #000000;
