--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/grid.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/grid.css
@@ -17,6 +17,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   min-height: 16px;
+  width: 100%;
   height: fit-content;
   background-color: transparent;
 }
@@ -29,6 +30,7 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
+  box-shadow: inset 0 0 0 1px #CFD8DC;
 }
 
 /* Editing guides */
