--- a/superset/assets/javascripts/dashboard/v2/components/dnd/dnd.css
+++ b/superset/assets/javascripts/dashboard/v2/components/dnd/dnd.css
@@ -1,29 +1,38 @@
-.draggable-row {
-  width: 100%;
-}
-
-.draggable-row,
-.draggable-row-item {
+.dragdroppable {
   position: relative;
 }
 
-.draggable-row--dragging,
-.draggable-row-item--dragging {
-  box-shadow: inset 0 0 0 1px #CFD8DC;
+.dragdroppable--dragging {
+  opacity: 0.25;
 }
 
-/*.draggable-row:hover {
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
-  z-index: 10;
-}*/
+.dragdroppable-row {
+  width: 100%;
+}
+
+.grid-container .dragdroppable-row:after {
+  border: 1px dashed transparent;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 1px;
+  left: 0;
+  z-index: 1;
+  pointer-events: none;
+}
+
+  .grid-container .dragdroppable-row:hover:after {
+    border: 1px dashed #aaa;
+  }
 
 .draggable-row-handle {
   opacity: 0;
   position: absolute;
-  width: 10px;
+  width: 20px;
   height: 100%;
   top: 0;
-  left: -10px;
+  left: -20px;
   cursor: move;
   z-index: 1;
   display: flex;
@@ -32,46 +41,57 @@
 }
 
   /* offset nested row handles */
-  .draggable-row .draggable-row .draggable-row-handle {
-    left: 10px;
+  .dragdroppable-row .dragdroppable-row .draggable-row-handle {
+    left: -2px;
   }
 
-.draggable-row-handle:after {
-  content: "";
-  background: #44C0FF;
-  display: block;
-  width: 5px;
-  height: 20%;
-  min-height: 20px;
-  margin: auto -5px auto 0;
+.draggable-row-handle .handle {
+  padding-left: 7px;
+  overflow: hidden;
+  width: 15px
 }
+
+.draggable-row-handle .handle .handle-dot,
+.draggable-row-item-handle .handle .handle-dot {
+  float: left;
+  height: 2px;
+  margin: 1px;
+  width: 2px
+}
+
+.draggable-row-handle .handle .handle-dot:after,
+.draggable-row-item-handle .handle .handle-dot:after {
+  background: #aaa;
+  content: "";
+  float: left;
+  height: 2px;
+  margin: -1px;
+  width: 2px;
+}
+
 
 .draggable-row-item-handle {
   opacity: 0;
   position: absolute;
   width: 100%;
-  height: 10px;
+  height: 20px;
   top: 0;
   left: 0;
   cursor: move;
   z-index: 1;
 }
 
-.draggable-row-item-handle:after {
-  content: "";
-  background: #44C0FF;
-  display: block;
-  margin: 5px auto 0 auto;
-  width: 20%;
-  min-width: 20px;
-  height: 5px;
+.draggable-row-item-handle .handle {
+  overflow: hidden;
+  width: 16px;
+  margin: 10px auto;
 }
 
-.draggable-row:hover .draggable-row-handle,
+.dragdroppable:hover .draggable-row-handle,
 .draggable-row-handle:hover,
-.draggable-row-item:hover .draggable-row-item-handle,
+.dragdroppable:hover .draggable-row-item-handle,
 .draggable-row-item-handle:hover,
-.draggable-column-item:hover .draggable-column-item-handle,
-.draggable-column-item-handle:hover {
+.dragdroppable-row .dragdroppable-row:hover .draggable-row-handle,
+.dragdroppable-row .dragdroppable-row:hover .draggable-row-item-handle {
   opacity: 1;
 }
