--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
@@ -8,8 +8,8 @@
   padding: 16px 0;
   color: #263238;
 }
-  .draggable-row .draggable-row .dashboard-component-header,
-  .draggable-row .draggable-row .dashboard-component-divider {
+  .dragdroppable-row .dragdroppable-row .dashboard-component-header,
+  .dragdroppable-row .dragdroppable-row .dashboard-component-divider {
     padding-left: 16px;
     padding-right: 16px;
   }
@@ -54,6 +54,9 @@
   width: 100%;
   background-color: white;
 }
+.dashboard-component-tabs .dashboard-component-tabs-content {
+  min-height: 48px;
+}
 
 .dashboard-component-tabs .nav-tabs {
   border-bottom: none;
@@ -87,4 +90,66 @@
   border: none;
   background: inherit;
   color: #000000;
+}
+
+/* New components */
+.new-component {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: 16px;
+  background: white;
+}
+
+.new-component-placeholder {
+  background: #f5f5f5;
+  width: 40px;
+  height: 40px;
+  margin-right: 16px;
+  box-shadow: 0 0 1px #fff;
+}
+
+/* Spacer */
+.grid-container {
+   flex-grow: 1;
+   min-width: 66%;
+   margin: 24px;
+   height: 100%;
+   position: relative;
+}
+
+.grid-column {
+  width: 100%;
+  min-height: 48px;
+}
+
+.grid-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  min-height: 48px;
+  width: 100%;
+  height: fit-content;
+  background-color: transparent;
+}
+
+.grid-row--empty {
+  content: "Empty row";
+  padding: 16px;
+}
+
+.grid-row-container {
+  background-color: #fff;
+}
+
+.grid-spacer {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+
+.dragdroppable:hover .grid-spacer {
+  box-shadow: inset 0 0 0 1px #CFD8DC;
 }
