--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
@@ -109,7 +109,7 @@
 }
 
 .dashboard-component-tabs .fa-plus-square {
-  background: linear-gradient(to right, #E32464, #2C2261);
+  background: linear-gradient(135deg, #E32464, #2C2261);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: initial;
@@ -154,10 +154,14 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  min-height: 56px;
   width: 100%;
   height: fit-content;
   background-color: transparent;
+}
+
+.grid-row.grid-row--empty {
+  align-items: center; /* this centers the empty note content */
+  min-height: 56px;
 }
 
 .grid-row--empty:after {
@@ -167,7 +171,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: #aaa;
+  color: #ccc;
 }
 
 .grid-column--empty:after {
@@ -177,7 +181,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: #aaa;
+  color: #ccc;
 }
 
 .grid-row-container {
