[dragdroppable] rename horizontal/vertical => row/column

--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
@@ -49,6 +49,10 @@
   background-color: #CFD8DC;
 }
 
+.dragdroppable .dashboard-component-divider {
+  cursor: move;
+}
+
 /* Tabs -- this overwrites Superset bootstrap theme tab styling */
 .dashboard-component-tabs {
   width: 100%;
