--- a/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
+++ b/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
@@ -4,7 +4,7 @@
 }
 
 /* after ensures border visibility on top of any children */
-.grid-resizable-container--resizing::after {
+.grid-resizable-container--resizing:after {
   content: "";
   position: absolute;
   top: 0;
