--- a/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
+++ b/superset/assets/javascripts/dashboard/v2/components/gridComponents/components.css
@@ -180,6 +180,10 @@
   font-size: 1em;
 }
 
+.new-component-placeholder.fa-window-restore {
+  font-size: 1em;
+}
+
 .new-component-placeholder.spacer-placeholder:after {
   content: "";
   position: absolute;
@@ -194,7 +198,7 @@
   min-height: 56px;
 }
 
-.grid-column .hover-menu--top {
+.grid-column > .hover-menu--top {
   top: -20px;
 }
 
@@ -267,7 +271,7 @@
   outline: none;
 }
 
-.grid-row.grid-row--empty .with-popover-menu { /* indicator doesn't show up without this */
+.grid-row.grid-row--empty .with-popover-menu { /* drop indicator doesn't show up without this */
   width: 100%;
   height: 100%;
 }
@@ -398,7 +402,7 @@
 }
 
 .hover-menu--left > :nth-child(n):not(:only-child):not(:last-child) {
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .dragdroppable-row .dragdroppable-row .hover-menu--left {
@@ -410,6 +414,14 @@
   height: 20px;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.hover-menu--top > :nth-child(n):not(:only-child):not(:last-child) {
+  margin-right: 8px;
 }
 
 .dragdroppable:hover .hover-menu,
