--- a/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
+++ b/superset/assets/javascripts/dashboard/v2/components/resizable/resizable.css
@@ -62,3 +62,11 @@
 .grid-resizable-container--resizing > span .resize-handle {
   border-color: #44C0FF;
 }
+
+/* re-resizable sets an empty div to 100% width and height, which doesn't
+  play well with many 100% height containers we need
+ */
+.grid-resizable-container ~ div {
+  width: auto !important;
+  height: auto !important;
+}
