--- a/superset/assets/javascripts/dashboard/v2/stylesheets/components/column.less
+++ b/superset/assets/javascripts/dashboard/v2/stylesheets/components/column.less
@@ -8,7 +8,7 @@
   margin-bottom: 16px;
 }
 
-.dashboard-v2--editing .grid-column:after {
+.dashboard--editing .grid-column:after {
   border: 1px solid transparent;
   content: "";
   position: absolute;
@@ -20,7 +20,7 @@
   pointer-events: none;
 }
 
-.dashboard-v2--editing .grid-column:hover:after {
+.dashboard--editing .grid-column:hover:after {
   border: 1px solid @gray-light;
 }
 
