--- a/superset/templates/superset/dashboard.html
+++ b/superset/templates/superset/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "superset/basic.html" %}
 
 {% block body %}
-  <div id="app" class="dashboard" data-bootstrap="{{ bootstrap_data }}" />
+  <div id="app" data-bootstrap="{{ bootstrap_data }}" />
 {% endblock %}
