--- a/superset/assets/javascripts/dashboard/v2/stylesheets/builder.less
+++ b/superset/assets/javascripts/dashboard/v2/stylesheets/builder.less
@@ -1,5 +1,4 @@
-.dashboard-v2 {
-  //margin-top: -20px;
+.dashboard {
   position: relative;
   color: @almost-black;
 }
@@ -22,12 +21,12 @@
 }
 
 /* only top-level tabs have popover, give it more padding to match header + tabs */
-.dashboard-v2 > .with-popover-menu > .popover-menu {
+.dashboard > .with-popover-menu > .popover-menu {
   left: 24px;
 }
 
 /* drop shadow for top-level tabs only */
-.dashboard-v2 .dashboard-component-tabs {
+.dashboard .dashboard-component-tabs {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   padding-left: 8px; /* note this is added to tab-level padding, to match header */
 }
